can add reviews

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,7 +32,12 @@ p {
 
 .row {
   display: flex;
-  flex-wrap: wrap;
+}
+
+@media screen and (max-width: 400px) {
+  .row {
+    flex-wrap: wrap !important;
+  }
 }
 
 .nowrap {
