--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -15,4 +15,7 @@
   padding-bottom: 5rem;
   padding-left: 25%;
   padding-right: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
